# SimpleFudgeProto

./: .gitignore  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac
misc/: fudgeproto.vim
scripts/: git2changelog.py  manbuilder.py
src/: .gitignore  Makefile.am  ast.cpp  ast.hpp  astaliaser.cpp  astaliaser.hpp  astdumper.cpp  astdumper.hpp  astextrefs.cpp  astextrefs.hpp  astextresolver.cpp  astextresolver.hpp  astflattener.cpp  astflattener.hpp  astgenerator.cpp  astgenerator.hpp  astindex.cpp  astindex.hpp  astindexer.cpp  astindexer.hpp  astrenamer.cpp  astrenamer.hpp  astresolver.cpp  astresolver.hpp  astwalker.cpp  astwalker.hpp  codewriter.cpp  codewriter.hpp  codewriterfactory.cpp  codewriterfactory.hpp  constants.hpp  cppheaderwriter.cpp  cppheaderwriter.hpp  cppimplwriter.cpp  cppimplwriter.hpp  cppwriter.cpp  cppwriter.hpp  cppwriterfactory.cpp  cppwriterfactory.hpp  filenamegenerator.cpp  (+15 more)
tests/: .gitignore  Makefile.am  encoderutils.hpp  simpletest.cpp  simpletest.hpp  test_arraymessage.cpp  test_deepinheritance.cpp  test_flatmessage.cpp  test_identifiermutator.cpp  test_nestedmessage.cpp  test_opaquemessage.cpp  test_optobjectsmessage.cpp  test_parser.cpp  test_safemessage.cpp
tests/test_files/: array.proto  clashing_modifiers.proto  deep_inheritance.proto  field_clash.proto  field_notclash.proto  flat.proto  invalid_modifier.proto  nested.proto  opaque.proto  optional_objects.proto  ordinal_clash.proto  safe.proto  wrong_default_type.proto  zero_ordinal.proto
